# DBWarden

./: .gitignore  404.html  PR_MESSAGE.md  README.md  RELEASE.md  codecov.yml  config_rework.md  config_rework_alt.md  dbwarden.py  index.html  mkdocs.yml  plan.md  pyproject.toml  run_integration_tests.py  spec.md  zensical.toml
.github/: CONTRIBUTING.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  plugin_approval.md
.github/workflows/: ci.yml  deploy-docs.yml  ecosystem.yml  publishing.yml
advanced/: index.html
advanced/checksum-integrity/: index.html
advanced/ci-cd-patterns/: index.html
advanced/migration-locking/: index.html
advanced/safe-deployment/: index.html
advanced/squashing-migrations/: index.html
architecture-deep-dive/: index.html
cli-reference/: index.html
commands/: index.html
commands/check-db/: index.html
commands/database/: index.html
commands/diff/: index.html
commands/history/: index.html
commands/init/: index.html
commands/lock/: index.html
commands/make-migrations/: index.html
commands/migrate/: index.html
commands/new/: index.html
commands/rollback/: index.html
commands/squash/: index.html
commands/status/: index.html
commands/version/: index.html
configuration/: index.html
configuration/concepts/: index.html
configuration/connection-urls/: index.html
configuration/dev-mode/: index.html
configuration/model-discovery/: index.html
configuration/multi-database/: index.html
configuration/production-patterns/: index.html
configuration/quick-start/: index.html
configuration/troubleshooting/: index.html
databases/: index.html
dbwarden/: __init__.py  _approved.py  _official.py  config.py  config_registry.py  config_schema.py  constants.py  db_handle.py  exceptions.py  logging.py  logging_audit.md  metrics.py  models.py  output.py  plugin.py  plugin_conformance.py  sandbox.py  seed.py
dbwarden/cli/: __init__.py  app.py  main.py  validators.py
dbwarden/commands/: __init__.py  backup.py  check.py  check_db.py  check_impact.py  database.py  downgrade.py  export_models.py  export_seeds.py  extra.py  generate_models.py  history.py  init.py  make_migrations.py  make_rollback.py  migrate.py  plugin_cmd.py  recover_model_state.py  rollback.py  seeds.py  settings.py  snapshot.py  status.py  utils.py
dbwarden/config/: __init__.py  build.py  resolve.py  state.py
dbwarden/database/: __init__.py  connection.py  queries.py
dbwarden/databases/: __init__.py
dbwarden/engine/: code_seeds.py  discovery.py  file_parser.py  impact.py  migration_name.py  model_discovery.py  offline.py  safety.py  sandbox.py  seeds.py  snapshot.py  sqlite_translation.py  version.py
dbwarden/extensions/: __init__.py  sandbox.py
dbwarden/fastapi/: __init__.py  async_db.py  context.py  engines.py  health.py  lifespan.py  lock.py  metrics.py  observability.py  routes.py  runtime.py  session.py  testing.py  types.py
dbwarden/repositories/: __init__.py  lock_repo.py  migrations_repo.py  seeds_repo.py
dbwarden/schema/: __init__.py  _auto_schema.py  _base.py  _meta.py  _meta_reader.py  constraint.py  engine.py  index.py  projection.py  seed.py  table_meta.py
docs/: advanced.md  architecture-deep-dive.md  cli-reference.md  codebase.md  commands.md  configuration.md  databases.md  features.md  glossary.md  index.md  installation.md  llms-full.txt  llms.txt  migration-files.md  models.md  observability.md  operations-runbook.md  quickstart.md  robots.txt  seeds.md  sql-translation.md
docs/advanced/: checksum-integrity.md  ci-cd-patterns.md  migration-locking.md  safe-deployment.md  squashing-migrations.md
docs/commands/: check-db.md  check.md  database.md  diff.md  downgrade.md  generate-models.md  history.md  init.md  lock.md  make-migrations.md  make-rollback.md  migrate.md  mode.md  new.md  rollback.md  schema-snapshots.md  seed.md  settings.md  snapshot.md  squash.md  status.md  version.md
docs/configuration/: concepts.md  connection-urls.md  credentials.md  dev-mode.md  index.md  model-discovery.md  multi-database.md  production-patterns.md  quick-start.md  troubleshooting.md
docs/cookbook/: 01-project-setup.md  02-models-and-migrations.md  03-apply-and-inspect.md  04-offline-ci.md  05-schema-inspection.md  06-safety-impact.md  07-seeds.md  08-multi-database.md  (+4 more)
examples/: README.md
fastapi/: index.html
installation/: index.html
migration-files/: index.html
models/: index.html
operations-runbook/: index.html
quickstart/: index.html
scripts/: check-import-boundary.py  ecosystem-check.py  generate_llms_full.py  generate_seo.py  plugin-impact.py
search/: search_index.json
sql-translation/: index.html
strata/: config.py
tests/: __init__.py  test_auto_schema.py  test_check_impact.py  test_cli_dev_mode.py  test_cli_make_migrations.py  test_clickhouse_compat.py  test_code_seeds.py  test_commands.py  test_config.py  test_config_alt.py  test_database_commands.py  test_database_connection.py  test_downgrade.py  test_export_models.py  test_extra_commands.py  test_fastapi_async_db.py  test_fastapi_edge_cases.py  test_fastapi_integration.py  test_fastapi_lifespan.py  test_fastapi_routes.py  test_fastapi_session.py  test_file_parser.py  test_generate_models.py  test_history.py  test_impact.py  test_lock.py  test_logging.py  test_make_migrations.py  test_migration_name.py  test_migration_ordering.py  test_model_discovery.py  test_new_migration.py  test_observability.py  test_offline_migrations.py  test_pg_e2e.py  test_pg_e2e_common.py  test_pg_grants.py  test_pg_phase1.py  test_pg_registry.py  test_pg_registry_phase4.py  (+19 more)
(+399 files in other folders)
