[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dbwarden"
version = "0.1.5"
description = "Database migration system for Python/SQLAlchemy projects"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Emiliano Gandini Outeda", email = "emiliano.gandini@protonmail.com" }
]
keywords = [
    "database",
    "migrations",
    "sqlalchemy",
    "fastapi",
    "postgres",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "packaging>=25.0",
    "pyyaml>=6.0.3",
    "rich>=12.2.0",
    "sqlalchemy>=2.0.10",
    "typer>=0.12.3",
]

[project.scripts]
dbwarden = "dbwarden.cli.main:main"

[project.optional-dependencies]
dev = [
    "psycopg2-binary>=2.9.11",
    "pytest>=8.4.2",
]
postgres = [
    "psycopg2-binary>=2.9.11",
]
sqlite = [
]

[tool.hatch.build.targets.wheel]
packages = ["dbwarden"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
