[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dbwarden"
version = "0.12.5"
description = "The SQL-first database toolkit for SQLAlchemy." 
readme = "README.md"
license = "MIT"
requires-python = ">=3.12.7"
authors = [
    { name = "Emiliano Gandini Outeda", email = "emiliano.gandini@protonmail.com" }
]
keywords = [
    "database",
    "migrations",
    "sqlalchemy",
    "fastapi",
    "postgres",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "attrs>=24.2.0",
    "cattrs>=24.1.0",
    "pyyaml>=6.0.3",
    "rich>=12.2.0",
    "schemap>=0.5.2",
    "seoslug>=2.0.1",
    "sqlalchemy>=2.0.10",
    "typer>=0.12.3",
    "zensical>=0.0.44",
]

[project.urls]
Homepage = "https://dbwarden.emiliano-go.com/"
Repository = "https://github.com/emiliano-go/DBWarden"
Documentation = "https://dbwarden.emiliano-go.com/"
"Bug Tracker" = "https://github.com/emiliano-go/DBWarden/issues"

[project.scripts]
dbwarden = "dbwarden.cli.main:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.4.2",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "prometheus-client>=0.21.0",
    "zensical",
    "seoslug",
    "httpx2>=2.4.0",
]
fastapi = [
    "fastapi>=0.136.1",
    "pydantic>=2.0.0",
    "asyncpg>=0.30.0",
    "aiosqlite>=0.20.0",
]
postgres = [
    "psycopg2-binary>=2.9.11",
]
sqlite = [
]
clickhouse = [
    "clickhouse-connect>=0.7.15",
    "aiohttp>=3.14.1",
]
mysql = [
    "pymysql>=1.1.0",
]
sandbox = [
    "testcontainers>=4.0.0",
]
metrics = [
    "prometheus-client>=0.21.0",
]

[tool.hatch.build.targets.wheel]
packages = ["dbwarden"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]

[tool.uv]
environments = ["sys_platform == 'linux'"]

[dependency-groups]
dev = [
    "pytest",
    "pytest-asyncio>=0.24.0",
    "typer",
]
mysql = [
    "pymysql>=1.1.0",
]
